--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
     <title>Bratender Coach</title>
   </head>
   <body>
-    <div id="modal-root"></div>
+    <div id="modal-root" class="modal-root"></div>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
